--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "jquery": "^3.5.1",
     "vue-navigation-bar": "^4.0.2",
     "vue-router": "^3.4.7"
   },
