--- a/docker/public-ui-app/DockerFile
+++ b/docker/public-ui-app/DockerFile
@@ -4,7 +4,7 @@ FROM node:12.2.0-alpine
 # set working directory
 WORKDIR /app
 
-# add '/app/node_modules/.bin` to $PATH
+# add '/app/node_modules/.bin' to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install and cache app dependencies
