--- a/docker/public-ui-app/DockerFile
+++ b/docker/public-ui-app/DockerFile
@@ -11,5 +11,6 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY ./package.json /app/package.json
 RUN npm install
 
+EXPOSE 8080
 # start app
 CMD ["npm", "run", "serve"]
