--- a/docker/public-ui-app/Dockerfile
+++ b/docker/public-ui-app/Dockerfile
@@ -1,5 +1,5 @@
 # base image
-FROM node:12.2.0-alpine
+FROM node:12-alpine
 
 # set working directory
 WORKDIR /app
@@ -9,7 +9,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install and cache app dependencies
 COPY ./package.json /app/package.json
-RUN npm install
+RUN npm install --verbose
 
 EXPOSE 8080
 # start app
