--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ deploy to dev:
     - kubectl config set-credentials gitlab --token="$KUBE_TOKEN"
     - kubectl config set-context default --cluster=dev-cluster --user=gitlab --namespace="$KUBE_NAMESPACE"
     - kubectl config use-context default
-    - envsubst < k8s/arcx-configmap.yml | kubectl apply -f -
+    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply -f -
     - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply -f -
     - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply -f -
   environment:
