--- a/k8s/arcx-public-ui-app.yml
+++ b/k8s/arcx-public-ui-app.yml
@@ -1,4 +1,4 @@
-uiVersion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arcx-public-ui-app
@@ -46,7 +46,7 @@ spec:
       - name: glcr-auth
 ---
 
-uiVersion: v1
+apiVersion: v1
 kind: Service
 metadata:
   name: arcx-public-ui-app-service
