--- a/docker/public-ui-app/Dockerfile
+++ b/docker/public-ui-app/Dockerfile
@@ -4,10 +4,16 @@ FROM node:12-alpine
 RUN apk add tree
 RUN tree .
 
-# install and cache app dependencies
-COPY ./package.json package.json
-RUN npm install --verbose
+RUN mkdir /usr/src/app
+WORKDIR /usr/src/app
 
-EXPOSE 8080
+# add `/usr/src/app/node_modules/.bin` to $PATH
+ENV PATH /usr/src/app/node_modules/.bin:$PATH
+
+# install and cache app dependencies
+COPY package.json /usr/src/app/package.json
+RUN npm install
+RUN npm install -g @vue/cli
+
 # start app
 CMD ["npm", "run", "serve"]
