--- a/docker/public-ui-app/Dockerfile
+++ b/docker/public-ui-app/Dockerfile
@@ -1,19 +1,15 @@
-# base image
-FROM node:12-alpine
-
-RUN apk add tree
-RUN tree .
+FROM node:10.15.0 as ui-builder
 
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
-
-# add `/usr/src/app/node_modules/.bin` to $PATH
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
-
-# install and cache app dependencies
 COPY package.json /usr/src/app/package.json
 RUN npm install
 RUN npm install -g @vue/cli
-
-# start app
-CMD ["npm", "run", "serve"]
+COPY . /usr/src/app
+RUN npm run build
+ 
+FROM nginx
+COPY  --from=ui-builder /usr/src/app/dist /usr/share/nginx/html
+EXPOSE 3000
+CMD ["nginx", "-g", "daemon off;"]
