--- a/docker/public-ui-app/Dockerfile
+++ b/docker/public-ui-app/Dockerfile
@@ -4,16 +4,10 @@ FROM node:12-alpine
 RUN apk add tree
 RUN tree .
 
-RUN mkdir /usr/src/app
-WORKDIR /usr/src/app
-
-# add `/usr/src/app/node_modules/.bin` to $PATH
-ENV PATH /usr/src/app/node_modules/.bin:$PATH
-
 # install and cache app dependencies
-COPY package.json /usr/src/app/package.json
-RUN npm install
-RUN npm install -g @vue/cli
+COPY ./package.json package.json
+RUN npm install --verbose
 
+EXPOSE 8080
 # start app
 CMD ["npm", "run", "serve"]
