Install Vue CLI.

--- a/docker/public-ui-app/Dockerfile
+++ b/docker/public-ui-app/Dockerfile
@@ -7,7 +7,9 @@ RUN tree .
 # install and cache app dependencies
 COPY ./package.json package.json
 RUN npm install --verbose
+RUN npm install -g @vue/cli
 
 EXPOSE 8080
+
 # start app
 CMD ["npm", "run", "serve"]
