--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
+  "devServer": {
+    "disableHostCheck": true
+  },
   "eslintConfig": {
     "root": true,
     "env": {
