--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "jquery": "^3.5.1",
-    "vue-navigation-bar": "^4.0.2",
-    "vue-router": "^3.4.7"
+    "http-resource": "^1.0.2",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3",
+    "vuetify": "^2.3.17",
+    "vuetify-loader": "^1.3.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
