--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VUE_APP_API_URL= http://localhost:7100/api/
+VUE_APP_API_AREA_OF_INTEREST=https://arcx-development-admin-api.devsecops-eval.epa.gov/api/area_of_interest
+VUE_APP_API_AREA_OF_INTEREST_ITEMS=https://arcx-development-admin-api.devsecops-eval.epa.gov/api/area_of_interest_items
+VUE_APP_API_AREA_OF_INTEREST_SUB_ITEMS=https://arcx-development-admin-api.devsecops-eval.epa.gov/api/area_of_interest_sub_items
 VUE_APP_TITLE=My App
 
