Add runtime variables from CI.

--- a/k8s/arcx-public-ui-app.yml
+++ b/k8s/arcx-public-ui-app.yml
@@ -33,6 +33,17 @@ spec:
         env:
           - name: REDEPLOY_META
             value: $CI_JOB_ID-$CI_COMMIT_SHA
+
+          - name: VUE_APP_API_AREA_OF_INTEREST
+            value: "$VUE_APP_API_AREA_OF_INTEREST"
+          - name: VUE_APP_API_AREA_OF_INTEREST_ITEMS
+            value: "$VUE_APP_API_AREA_OF_INTEREST_ITEMS"
+          - name: VUE_APP_API_AREA_OF_INTEREST_SUB_ITEMS
+            value: "$VUE_APP_API_AREA_OF_INTEREST_SUB_ITEMS"
+          - name: VUE_APP_API_URL
+            value: "$VUE_APP_API_URL"
+          - name: VUE_APP_TITLE
+            value: "$VUE_APP_TITLE"
         livenessProbe:
          tcpSocket:
             port: 8080
