Revert "Remove env config."
This reverts commit eb78d2e21b59b9529ffdc87f21cda84546d3d0fb

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "eslintConfig": {
     "root": true,
+    "env": {
+      "node": true
+    },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
