--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - test
   - images
   - deploy
 
@@ -49,3 +50,15 @@ deploy to dev:
     - branches
   except:
     - master
+
+include:
+  - template: Security/Dependency-Scanning.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+
+dependency_scanning:
+  tags:
+    - docker
+    
+sast:
+  tags:
+    - docker
