--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,12 @@ stages:
   - deploy
   - Image Scan
 
-public-ui-app:image:build:
+default:
   tags:
-    - docker
+    - devsecops-instance 
+
+
+public-ui-app:image:build:
   stage: images
   image:
     name: gcr.io/kaniko-project/executor:debug
@@ -16,8 +19,6 @@ public-ui-app:image:build:
     - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/docker/public-ui-app/Dockerfile --destination $CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_REF_SLUG
 
 public-ui-web:image:build:
-  tags:
-    - docker
   stage: images
   image:
     name: gcr.io/kaniko-project/executor:debug
@@ -30,8 +31,6 @@ public-ui-web:image:build:
 deploy to dev:
   when: manual
   stage: deploy
-  tags:
-    - docker
   image: dtzar/helm-kubectl
   script:
     - apk add gettext
