--- a/k8s/arcx-public-ui-web.yml
+++ b/k8s/arcx-public-ui-web.yml
@@ -58,6 +58,7 @@ metadata:
   name: arcx-public-ui-web-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/auth-tls-secret: arc-x-public-ui-236-dev/arc-x-cert
 spec:
   rules:
   - host: arcx-public-ui.devsecops-dev.aws.epa.gov
@@ -66,3 +67,7 @@ spec:
       - backend:
           serviceName: arcx-public-ui-web-service
           servicePort: 80
+  tls:
+    - hosts:
+      - arcx-public-ui.devsecops-dev.aws.epa.gov
+      secretName: arc-x-cert
