Revert "Merge branch 'dev' into 'master'"
This reverts merge request !19

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ public-ui-app:image:build:
   script:
     - mkdir -p /kaniko/.docker
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/docker/public-ui-app/Dockerfile --destination $CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_SHORT_SHA
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/docker/public-ui-app/Dockerfile --destination $CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_REF_SLUG
 
 public-ui-web:image:build:
   stage: images
@@ -27,7 +27,7 @@ public-ui-web:image:build:
   script:
     - mkdir -p /kaniko/.docker
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/docker/public-ui-web/Dockerfile --destination $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_SHORT_SHA
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/docker/public-ui-web/Dockerfile --destination $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_REF_SLUG
 
 deploy to dev:
   when: manual
@@ -35,19 +35,17 @@ deploy to dev:
   image: dtzar/helm-kubectl
   script:
     - apk add gettext
-    - kubectl config set-cluster $KUBECTL_DEV_CLUSTER --server="$KUBE_URL"
-    - kubectl config set-cluster $KUBECTL_DEV_CLUSTER --certificate-authority=$KUBE_CA_PEM_FILE --embed-certs=true
+    - kubectl config set-cluster dev-cluster --server="$KUBE_URL"
+    - kubectl config set-cluster dev-cluster --certificate-authority=$KUBE_CA_PEM_FILE --embed-certs=true
     - kubectl config set-credentials gitlab --token="$KUBE_TOKEN"
-    - kubectl config set-context default --cluster=$KUBECTL_DEV_CLUSTER --user=gitlab --namespace="$KUBE_NAMESPACE"
+    - kubectl config set-context default --cluster=dev-cluster --user=gitlab --namespace="$KUBE_NAMESPACE"
     - kubectl config use-context default
     - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply -f -
     - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply -f -
     - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply -f -
   environment:
-    name: dev
-    url: https://arcx-public-ui.devsecops-dev.aws.epa.gov
-    kubernetes:
-      namespace: arc-x-public-ui-236-dev
+    name: development
+    url: https://arcx-development-public-ui.devsecops-eval.epa.gov
   only:
     - branches
   except:
