--- a/k8s/arcx-public-ui-web.yml
+++ b/k8s/arcx-public-ui-web.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_SHORT_SHA
+        image: $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_REF_SLUG
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -58,16 +58,11 @@ metadata:
   name: arcx-public-ui-web-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/auth-tls-secret: arc-x-public-ui-236-dev/arc-x-cert
 spec:
   rules:
-  - host: arcx-public-ui.devsecops-dev.aws.epa.gov
+  - host: arcx-development-public-ui.devsecops-eval.epa.gov
     http:
       paths:
       - backend:
           serviceName: arcx-public-ui-web-service
           servicePort: 80
-  tls:
-    - hosts:
-      - arcx-public-ui.devsecops-dev.aws.epa.gov
-      secretName: arc-x-cert
