--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ default:
   tags:
     - devsecops-instance 
 
+include:
+  - remote: 'https://gitlab.com/prismacloud-public/shift-left/extension/-/raw/master/.pcs.gitlab-ci.yml'
 
 public-ui-app:image:build:
   stage: images
@@ -52,18 +54,22 @@ deploy to dev:
   except:
     - master
 
-Prisma:
+prisma-scan:
   stage: Image Scan
+  extends:
+    - .pcs_compute_scan
   tags:
     - twistcli
   when: manual
+  allow_failure: false
+  parallel:
+    matrix:
+      - prisma_cloud_scan_image: ["$CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_SHORT_SHA","$CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_SHORT_SHA"]
   variables:
+    prisma_cloud_compute_url: "https://prismacloud.gitlab-prod.aws.epa.gov"
     GIT_STRATEGY: clone
-    PRISMA_URL: https://prismacloud.gitlab-prod.aws.epa.gov
   script:
-    - docker pull $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_SHORT_SHA
-    - /public/server/apps/twistcli images scan --details --address $PRISMA_URL $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_SHORT_SHA
-
-    - docker pull $CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_SHORT_SHA
-    - /public/server/apps/twistcli images scan --details --address $PRISMA_URL $CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_SHORT_SHA
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD registry.epa.gov
+    - docker pull $prisma_cloud_scan_image
+    - ./image_scan.sh
 
