--- a/k8s/arcx-public-ui-prd-web.yml
+++ b/k8s/arcx-public-ui-prd-web.yml
@@ -73,7 +73,8 @@ spec:
         backend:
           service: 
             name: arcx-public-ui-web-service
-            port : 80
+            port : 
+              number: 80
   - host: climateadaptation.epa.gov
     http:
       paths:
@@ -82,7 +83,8 @@ spec:
         backend:
           service: 
             name: arcx-public-ui-web-service
-            port : 80
+            port : 
+              number: 80
   tls:
   - hosts:
     - arcx.devsecops-prod.aws.epa.gov
