--- a/k8s/arcx-public-ui-prd-web.yml
+++ b/k8s/arcx-public-ui-prd-web.yml
@@ -47,7 +47,11 @@ metadata:
   name: arcx-public-ui-web-service
 spec:
   ports:
-  - port: 80
+  - port: 443
+    protocol: TCP
+    targetPort: 80
+    name: https
+
   selector:
     app: arcx-public-ui-web
 
@@ -74,7 +78,7 @@ spec:
           service: 
             name: arcx-public-ui-web-service
             port : 
-              number: 80
+              number: 443
   - host: climateadaptation.epa.gov
     http:
       paths:
@@ -84,7 +88,7 @@ spec:
           service: 
             name: arcx-public-ui-web-service
             port : 
-              number: 80
+              number: 443
   tls:
   - hosts:
     - arcx.devsecops-prod.aws.epa.gov
