--- a/docker/public-ui-web/nginx.conf
+++ b/docker/public-ui-web/nginx.conf
@@ -49,4 +49,34 @@ http {
     }
 
   }
+
+  server {
+    listen  443 ssl http2;
+    charset utf-8;
+    server_name climateadaptation.epa.gov;
+
+    # SSL Cipher Suite
+    ssl_ciphers ALL;
+    ssl_proxy_ciphers ECDH+AESGCM:ECDH+CHACHA20:DH+AESGCM;
+    ssl_prefer_server_ciphers off;
+    # SSL Protocols
+    ssl_protocols SSLv2 SSLv3 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_proxy_protocols SSLv2 SSLv3 TLSv1.1 TLSv1.2 TLSv1.3;
+
+    root    /app/public;
+
+    # static files
+    location / {
+      try_files $uri @proxy_to_app;
+    }
+
+    # django
+    location @proxy_to_app {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_pass   http://app;
+    }
+
+  }
 }
