--- a/docker/public-ui-web/nginx.conf
+++ b/docker/public-ui-web/nginx.conf
@@ -51,7 +51,7 @@ http {
   }
 
   server {
-    listen  443 ssl http2;
+    listen  443;
     charset utf-8;
     server_name climateadaptation.epa.gov;
 
