--- a/docker/public-ui-web/nginx.conf
+++ b/docker/public-ui-web/nginx.conf
@@ -56,10 +56,10 @@ http {
     server_name climateadaptation.epa.gov;
 
     # SSL Cipher Suite
-    ssl_ciphers ECDH+AESGCM:ECDH+CHACHA20:DH+AESGCM;
-    ssl_prefer_server_ciphers on;
+    #ssl_ciphers ECDH+AESGCM:ECDH+CHACHA20:DH+AESGCM;
+    #ssl_prefer_server_ciphers on;
     # SSL Protocols
-    ssl_protocols SSLv2 SSLv3 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
     root    /app/public;
 
