use gitlab agent to install to a new cluster

--- a/k8s/arcx-public-ui-configmap.yml
+++ b/k8s/arcx-public-ui-configmap.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: arcx-public-ui-configmap
+  namespace: arc-x-public-ui-236-dev
   labels:
     name: arcx-public-ui-configmap
   annotations:
