--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,14 @@ default:
   tags:
     - devsecops-instance 
 
+variables:
+  KUBE_CONTEXT: arc-x/arc-x-k8s-agent:arcx-dev-k8s-agent
+
+# Set K8s context of GitLab Agent
+.kube-context:
+  before_script:
+  - if [ -n "$KUBE_CONTEXT" ]; then kubectl config use-context "$KUBE_CONTEXT"; fi
+
 include:
   - remote: 'https://gitlab.com/prismacloud-public/shift-left/extension/-/raw/master/.pcs.gitlab-ci.yml'
 
@@ -33,17 +41,12 @@ public-ui-web:image:build:
 deploy to dev:
   when: manual
   stage: deploy
+  extends: [.kube-context]
   image: dtzar/helm-kubectl
   script:
-    - apk add gettext
-    - kubectl config set-cluster $KUBECTL_DEV_CLUSTER --server="$KUBE_URL"
-    - kubectl config set-cluster $KUBECTL_DEV_CLUSTER --certificate-authority=$KUBE_CA_PEM_FILE --embed-certs=true
-    - kubectl config set-credentials gitlab --token="$KUBE_TOKEN"
-    - kubectl config set-context default --cluster=$KUBECTL_DEV_CLUSTER --user=gitlab --namespace="$KUBE_NAMESPACE"
-    - kubectl config use-context default
-    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply -f -
-    - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply -f -
-    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply -f -
+    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply --validate=false -f -
+    - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply --validate=false -f -
+    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply --validate=false -f -
   environment:
     name: dev
     url: https://arcx-public-ui.devsecops-dev.aws.epa.gov
