--- a/k8s/arcx-public-ui-app.yml
+++ b/k8s/arcx-public-ui-app.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arcx-public-ui-app
+  namespace: arc-x-public-ui-236-dev
 spec:
   replicas: 1
   selector:
@@ -68,6 +69,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: arcx-public-ui-app-service
+  namespace: arc-x-public-ui-236-dev
 spec:
   ports:
   - port: 8080
