--- a/k8s/arcx-public-ui-web.yml
+++ b/k8s/arcx-public-ui-web.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arcx-public-ui-web
+  namespace: arc-x-public-ui-236-dev
 spec:
   replicas: 1
   selector:
@@ -44,29 +45,42 @@ apiVersion: v1
 kind: Service
 metadata:
   name: arcx-public-ui-web-service
+  namespace: arc-x-public-ui-236-dev
 spec:
   ports:
-  - port: 80
+  - port: 443
+    protocol: TCP
+    target_port: 80
+    name: https
   selector:
     app: arcx-public-ui-web
 
 ---
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: arcx-public-ui-web-ingress
+  namespace: arc-x-public-ui-236-dev
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
+    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
     nginx.ingress.kubernetes.io/auth-tls-secret: arc-x-public-ui-236-dev/arc-x-cert
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
 spec:
   rules:
   - host: arcx-public-ui.devsecops-dev.aws.epa.gov
     http:
       paths:
-      - backend:
-          serviceName: arcx-public-ui-web-service
-          servicePort: 80
+      - path: /
+        pathType: Prefix  
+        backend:
+          service:
+            name: arcx-public-ui-web-service
+            port: 
+              number: 443
   tls:
     - hosts:
       - arcx-public-ui.devsecops-dev.aws.epa.gov
