--- a/k8s/arcx-public-ui-prd-web.yml
+++ b/k8s/arcx-public-ui-prd-web.yml
@@ -62,23 +62,23 @@ kind: Ingress
 metadata:
   name: arcx-public-ui-web-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
     app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
     nginx.ingress.kubernetes.io/auth-tls-secret: ${KUBE_NAMESPACE}/arcx-tls-cert
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
 spec:
+  ingressClassName: nginx
   rules:
   - host: climateadaptation.epa.gov
     http:
       paths:
       - path: /
-        pathType: Prefix    
+        pathType: Prefix
         backend:
-          service: 
+          service:
             name: arcx-public-ui-web-service
-            port : 
+            port :
               number: 443
   tls:
   - hosts:
