--- a/k8s/arcx-public-ui-web.yml
+++ b/k8s/arcx-public-ui-web.yml
@@ -57,8 +57,8 @@ kind: Ingress
 metadata:
   name: arcx-public-ui-web-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: nginx
   rules:
   - host: arcx-development-public-ui.devsecops-eval.epa.gov
     http:
