--- a/k8s/arcx-public-ui-web.yml
+++ b/k8s/arcx-public-ui-web.yml
@@ -63,23 +63,23 @@ metadata:
   name: arcx-public-ui-web-ingress
   namespace: arc-x-public-ui-236-dev
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
     app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
     nginx.ingress.kubernetes.io/auth-tls-secret: arc-x-public-ui-236-dev/arc-x-cert
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
 spec:
+  ingressClassName: nginx
   rules:
   - host: arcx-public-ui.devsecops-dev.aws.epa.gov
     http:
       paths:
       - path: /
-        pathType: Prefix  
+        pathType: Prefix
         backend:
           service:
             name: arcx-public-ui-web-service
-            port: 
+            port:
               number: 443
   tls:
     - hosts:
