--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 default:
   tags:
-    - devsecops-instance 
+    - devsecops-instance
 
 variables:
   KUBE_CONTEXT: arc-x/arc-x-k8s-agent:arcx-dev-k8s-agent
@@ -44,7 +44,7 @@ deploy to dev:
   extends: [.kube-context]
   image: dtzar/helm-kubectl
   script:
-    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply --validate=false -f -
+    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply -f -
     - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply --validate=false -f -
     - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply --validate=false -f -
   environment:
