troubleshoot configmap yaml

--- a/k8s/arcx-public-ui-configmap.yml
+++ b/k8s/arcx-public-ui-configmap.yml
@@ -8,6 +8,5 @@ metadata:
   annotations:
     app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
     app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
-
 data:
-  EXAMPLE: "123"
+  EXAMPLE: 123
