--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,9 +44,9 @@ deploy to dev:
   extends: [.kube-context]
   image: dtzar/helm-kubectl
   script:
-    - envsubst < k8s/arcx-public-ui-configmap.yml | cat -A #kubectl apply -f -
+    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply --validate=false -f -
     - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply --validate=false -f -
-    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply --validate=false -f -
+    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply -f -
   environment:
     name: dev
     url: https://arcx-public-ui.devsecops-dev.aws.epa.gov
