--- a/k8s/arcx-public-ui-configmap.yml
+++ b/k8s/arcx-public-ui-configmap.yml
@@ -9,4 +9,4 @@ metadata:
     app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
     app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
 data:
-  EXAMPLE: 123
+  EXAMPLE: "123"
