--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,10 +44,10 @@ deploy to dev:
   extends: [.kube-context]
   image: dtzar/helm-kubectl
   script:
-    - envsubst < k8s/arcx-public-ui-configmap.yml | cat
-    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply -f - --output=yaml
+    - envsubst < k8s/arcx-public-ui-configmap.yml | grep '<'
+    - envsubst < k8s/arcx-public-ui-configmap.yml | kubectl apply --validate=false -f -
     - envsubst < k8s/arcx-public-ui-app.yml | kubectl apply --validate=false -f -
-    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply --validate=false -f -
+    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply --validate=false --overwrite=true -f -
   environment:
     name: dev
     url: https://arcx-public-ui.devsecops-dev.aws.epa.gov
