--- a/package.json
+++ b/package.json
@@ -8,33 +8,34 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^0.1.7",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^3.6.5",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.2",
+    "core-js": "^3.32.1",
     "http-resource": "^1.0.2",
-    "jquery": "^3.4.1",
-    "modernizr": "^3.11.7",
+    "jquery": "^3.7.0",
+    "modernizr": "^3.13.0",
     "popper.js": "^1.16.1",
     "vee-validate": "^2.2.15",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuetify": "^2.3.17",
-    "vuetify-loader": "^1.3.0",
-    "vuex": "^3.0.1"
+    "vue": "^2.7.14",
+    "vue-router": "^3.6.5",
+    "vuetify": "^2.7.1",
+    "vuetify-loader": "^1.9.2",
+    "vuex": "^3.6.2",
+    "y18n": "5.0.8"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.19",
+    "@vue/cli-plugin-eslint": "^4.5.19",
+    "@vue/cli-service": "^4.5.19",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.36.0",
-    "sass-loader": "^12.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.66.1",
+    "sass-loader": "^12.6.0",
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
