--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.66.1",
     "sass-loader": "^12.6.0",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.14",
+    "y18n": "5.0.8"
+
   },
   "eslintConfig": {
     "root": true,
