--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuetify": "^2.7.1",
     "vuetify-loader": "^1.9.2",
     "vuex": "^3.6.2",
+    "yarn": "^1.22.19",
     "y18n": "5.0.8"
   },
   "devDependencies": {
@@ -35,9 +36,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.66.1",
     "sass-loader": "^12.6.0",
-    "vue-template-compiler": "^2.7.14",
-    "y18n": "5.0.8"
-
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
