--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "vuetify": "^2.7.1",
     "vuetify-loader": "^1.9.2",
     "vuex": "^3.6.2",
-    "yarn": "^1.22.19",
-    "y18n": "5.0.8"
+    "y18n": "5.0.8",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.19",
@@ -36,7 +36,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.66.1",
     "sass-loader": "^12.6.0",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.14",
+    "y18n": "5.0.8"
   },
   "eslintConfig": {
     "root": true,
