Trying new base image

--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.7.14",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.7.1",
-    "vuetify-loader": "^1.9.2",
     "vuex": "^3.6.2",
-    "y18n": "5.0.8",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -36,8 +33,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.66.1",
     "sass-loader": "^12.6.0",
-    "vue-template-compiler": "^2.7.14",
-    "y18n": "5.0.8"
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
