--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "http-resource": "^1.0.2",
     "jquery": "^3.7.0",
     "modernizr": "^3.13.0",
-    "popper.js": "^1.16.1",
     "vee-validate": "^2.2.15",
     "vue": "^2.7.14",
     "vue-router": "^3.6.5",
+    "vuetify": "^2.7.1",
+    "vuetify-loader": "^1.9.2",
     "vuex": "^3.6.2",
     "yarn": "^1.22.19"
   },
