--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-resource": "^1.0.2",
     "jquery": "^3.7.0",
     "modernizr": "^3.13.0",
+    "popper.js": "^1.16.1",
     "vee-validate": "^2.2.15",
     "vue": "^2.7.14",
     "vue-router": "^3.6.5",
