--- a/docker/public-ui-app/Dockerfile
+++ b/docker/public-ui-app/Dockerfile
@@ -10,6 +10,6 @@ RUN npm run build
 
 FROM nginx:mainline-alpine
 
-COPY --from=build dist/ /usr/share/nginx/html
+COPY --from=build /usr/src/app/dist/ /usr/share/nginx/html
 
 
