--- a/k8s/arcx-public-ui-web.yml
+++ b/k8s/arcx-public-ui-web.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arcx-public-ui-web
+  namespace: arc-x-public-ui-236-dev
 spec:
   replicas: 1
   selector:
@@ -21,7 +22,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_REF_SLUG
+        image: $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_SHORT_SHA
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -44,6 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: arcx-public-ui-web-service
+  namespace: arc-x-public-ui-236-dev
 spec:
   ports:
   - port: 80
@@ -52,17 +54,30 @@ spec:
 
 ---
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: arcx-public-ui-web-ingress
+  namespace: arc-x-public-ui-236-dev
   annotations:
+    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
+    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
 spec:
   ingressClassName: nginx
   rules:
-  - host: arcx-development-public-ui.devsecops-eval.epa.gov
+  - host: arcx-public-ui.devsecops-dev.aws.epa.gov
     http:
       paths:
-      - backend:
-          serviceName: arcx-public-ui-web-service
-          servicePort: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: arcx-public-ui-web-service
+            port:
+              number: 80
+  tls:
+    - hosts:
+      - arcx-public-ui.devsecops-dev.aws.epa.gov
+      secretName: arc-x-cert
