--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,18 +41,20 @@ prisma scan:
 deploy to dev:
   when: manual
   stage: deploy
+  extends: [.kube-context]
   image: dtzar/helm-kubectl
   script:
-    - if [ -n "$KUBE_CONTEXT" ]; then kubectl config use-context "$KUBE_CONTEXT"; fi
-    - apk add gettext
-    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply -f -
+    - envsubst < k8s/arcx-public-ui-web.yml | kubectl apply --validate=false --record=false -f -
   environment:
-    name: development
-    url: https://arcx-development-public-ui.devsecops-eval.epa.gov
+    name: dev
+    url: https://arcx-public-ui.devsecops-dev.aws.epa.gov
+    kubernetes:
+      namespace: arc-x-public-ui-236-dev
   only:
     - branches
   except:
     - master
+
 
 Release:
   stage: release
