Remove unnecessary deps.

--- a/docker/public-ui-web/Dockerfile
+++ b/docker/public-ui-web/Dockerfile
@@ -11,3 +11,5 @@ RUN npm run build
 FROM nginx:mainline-alpine
 
 COPY --from=build /usr/src/app/dist/ /usr/share/nginx/html
+
+RUN apk del --no-cache curl nginx-module-image-filter
