Remove CA certs package.

--- a/docker/public-ui-web/Dockerfile
+++ b/docker/public-ui-web/Dockerfile
@@ -13,6 +13,7 @@ FROM nginx:mainline-alpine
 COPY --from=build /usr/src/app/dist/ /usr/share/nginx/html
 
 RUN apk del --no-cache curl \
+    ca-certificates \
     nginx-module-image-filter \
     nginx-module-xslt \
     nginx-module-njs \
