Actually move the template file.

--- a/docker/public-ui-web/Dockerfile
+++ b/docker/public-ui-web/Dockerfile
@@ -15,6 +15,7 @@ COPY --from=build /usr/src/app/dist/ /usr/share/nginx/html
 RUN apk update && apk add gettext
 
 COPY ./docker/public-ui-web/start-nginx.sh /usr/bin/start-nginx.sh
+COPY ./config.json.tpl /usr/share/nginx/html/
 COPY ./config.json /usr/share/nginx/html/
 
 RUN apk del --no-cache curl \
