--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ VITE_API_AREA_OF_INTEREST_ITEMS=https://climateadaptation.epa.gov/api/area_of_in
 VITE_API_AREA_OF_INTEREST_SUB_ITEMS=https://climateadaptation.epa.gov/api/area_of_interest_sub_items
 VITE_API_STEPS_TO_HELP_PREPARE=https://climateadaptation.epa.gov/api/steps_to_help_prepare
 VITE_API_STEPS_TO_HELP_PREPARE_ITEMS=https://climateadaptation.epa.gov/api/steps_to_help_prepare_items
+VITE_API_STEPS_TO_HELP_PREPARE_ITEMS=https://climateadaptation.epa.gov/api/steps_to_help_prepare_items
