add back helloworld file

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ VITE_API_AREA_OF_INTEREST_SUB_ITEMS=/api/area_of_interest_sub_items
 VITE_API_STEPS_TO_HELP_PREPARE=/api/steps_to_help_prepare
 VITE_API_STEPS_TO_HELP_PREPARE_ITEMS=/api/steps_to_help_prepare_items
 VITE_API_STEPS_TO_HELP_PREPARE_ITEMS=/api/steps_to_help_prepare_items
+VITE_API_ADDITIONAL_INFORMATION=/api/additional_information
